change text Things to Think

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Snap Sync Things is comming...</h1>
+    <h1>Snap Sync Think is comming...</h1>
   </body>
 </html>
