--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <!-- Link html with css starts here -->
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- Link html with css ends -->
+
+    <title>Snap Sync - Explore a Seamless Visual Journey</title>
   </head>
   <body>
     <h1>Snap Sync Think is comming...</h1>
