start designing a header section and 50% completed

--- a/index.html
+++ b/index.html
@@ -4,13 +4,88 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Link html with css starts here -->
-    <link rel="stylesheet" href="./css/styles.css" />
-    <!-- Link html with css ends -->
+    <!-- Site Favicon Starts Are Here -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./favicon_io/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicon_io/site.webmanifest" />
+    <!-- Site Favicon Ends Are Here -->
+
+    <!-- Using FontAwesome Icon Starts Are Here  -->
+    <script
+      src="https://kit.fontawesome.com/d8e609dd6a.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Using FontAwesome Icon Ends Are Here -->
+
+    <!-- Linked With CSS Files Starts Are Here -->
+    <link rel="stylesheet" href="./css/default.css" />
+    <link rel="stylesheet" href="./css/headers.css" />
+    <!-- Linked With CSS Files Ends Are Here-->
 
     <title>Snap Sync - Explore a Seamless Visual Journey</title>
   </head>
   <body>
-    <h1>Snap Sync Think is comming...</h1>
+    <!-- =================================================================================  -->
+    <!--Snap Sync Header Starts Are Here -->
+    <header id="ssh">
+      <div class="sshContainer">
+        <div class="sshLogo">
+          <a href="#">
+            <img src="./images/logo/snapSyncLogo.png" alt="Snap Sync" />
+          </a>
+        </div>
+        <div class="sshSearch">
+          <form>
+            <button title="Search Image" type="submit">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+            <input
+              id="search"
+              name="search"
+              type="search"
+              placeholder="Search high-resolution image"
+              title="Search Term: Eg: Snap Photo"
+            />
+          </form>
+        </div>
+        <div class="sshEaU">
+          <ul>
+            <li><a href="#">Explore</a></li>
+            <li><a href="#">Advertise</a></li>
+            <li><a id="sshUnsplashPlus" href="#">SnapSync+</a></li>
+          </ul>
+        </div>
+        <div class="sshUserActions">
+          <div class="loginButton">Log In</div>
+          <button>Submit a photo</button>
+        </div>
+        <div class="sshMenuBar">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </div>
+    </header>
+    <!--Snap Sync Header Ends Are Here -->
+    <!-- =================================================================================  -->
   </body>
 </html>
