--- a/index.html
+++ b/index.html
@@ -31,13 +31,6 @@
     <link rel="manifest" href="./favicon_io/site.webmanifest" />
     <!-- Site Favicon Ends Are Here -->
 
-    <!-- Using FontAwesome Icon Starts Are Here  -->
-    <script
-      src="https://kit.fontawesome.com/d8e609dd6a.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Using FontAwesome Icon Ends Are Here -->
-
     <!-- Linked With CSS Files Starts Are Here -->
     <link rel="stylesheet" href="./css/default.css" />
     <link rel="stylesheet" href="./css/headers.css" />
@@ -52,13 +45,16 @@
       <div class="sshContainer">
         <div class="sshLogo">
           <a href="#">
-            <img src="./images/logo/snapSyncLogo.png" alt="Snap Sync" />
+            <img src="./images/logoPictures/snapSyncLogo.png" alt="Snap Sync" />
           </a>
         </div>
         <div class="sshSearch">
           <form>
             <button title="Search Image" type="submit">
-              <i class="fa-solid fa-magnifying-glass"></i>
+              <img
+                src="./images/headerPictures/searchPictures.png"
+                alt="Search Pictures"
+              />
             </button>
             <input
               id="search"
@@ -77,15 +73,242 @@
           </ul>
         </div>
         <div class="sshUserActions">
-          <div class="loginButton">Log In</div>
+          <div class="sshLoginButton">Log In</div>
           <button>Submit a photo</button>
         </div>
         <div class="sshMenuBar">
-          <i class="fa-solid fa-bars"></i>
+          <button id="sshMenuBarButton" title="Menu Bar">
+            <img
+              src="./images/headerPictures/menuBarPictures.png"
+              alt="Menu Bar Pictures"
+            />
+          </button>
+          <!-- Menu Starts Are Here -->
+          <div class="sshMenu">
+            <div class="sshMenuContainer">
+              <div class="sshMenuBox">
+                <div class="sshMenuBoxLogo">
+                  <img
+                    src="./images/headerPictures/menuIcon/companyIcon.png"
+                    alt="Company icon"
+                  />
+                  <strong>Company</strong>
+                </div>
+                <div class="sshMenuBoxLinks">
+                  <ul>
+                    <li><a title="" href="">About</a></li>
+                    <li><a href="">History</a></li>
+                    <li><a href="">Join the team</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Press</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Help Center</a></li>
+                  </ul>
+                  <ul class="socialLinks">
+                    <li>
+                      <a title="X / Twiiter" href="">
+                        <img
+                          src="./images/sociaLicon/twitter.png"
+                          alt="X / Twitter"
+                        />
+                      </a>
+                    </li>
+                    <li>
+                      <a title="Facebook" title="Facebook" href="">
+                        <img
+                          src="./images/sociaLicon/facebook.png"
+                          alt="Facebook"
+                        />
+                      </a>
+                    </li>
+                    <li>
+                      <a title="Instagram" href="">
+                        <img
+                          src="./images/sociaLicon/instagram.png"
+                          alt="Instagram"
+                        />
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="sshMenuBox">
+                <div class="sshMenuBoxLogo">
+                  <img
+                    src="./images/headerPictures/menuIcon/productsIcon.png"
+                    alt="Products icon"
+                  />
+                  <strong>Products</strong>
+                </div>
+                <div class="sshMenuBoxLinks">
+                  <ul>
+                    <li><a href="">Developer/APIs</a></li>
+                    <li><a href="">SnapSync Dataset</a></li>
+                    <li><a href="">SnapSync for ios</a></li>
+                    <li><a href="">Apps and Plugins</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="sshMenuBox">
+                <div class="sshMenuBoxLogo">
+                  <img
+                    src="./images/headerPictures/menuIcon/communityIcon.png"
+                    alt="Community icon"
+                  />
+                  <strong>Community</strong>
+                </div>
+                <div class="sshMenuBoxLinks">
+                  <ul>
+                    <li><a href="">Become a Contributor</a></li>
+                    <li><a href="">Topics</a></li>
+                    <li><a href="">Collections</a></li>
+                    <li><a href="">Trends</a></li>
+                    <li><a href="">SnapSync Awards</a></li>
+                    <li><a href="">Stats</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="sshBottomBar">
+              <div class="sshPages">
+                <ul>
+                  <li><a href="">License</a></li>
+                  <li><a href="">Privacy Policy</a></li>
+                  <li><a href="">Terms</a></li>
+                  <li><a href="">Security</a></li>
+                </ul>
+              </div>
+              <div class="sshLanguages">
+                <img
+                  src="./images/headerPictures/menuIcon/translateLanguage.png"
+                  alt="Translate Language"
+                />
+                <select
+                  title="Select Your Language"
+                  name="languagSelect"
+                  id="languagesSelect"
+                >
+                  <option disabled>Select Your Language</option>
+                  <option value="af">Afrikaans</option>
+                  <option value="sq">Albanian</option>
+                  <option value="am">Amharic</option>
+                  <option value="ar">Arabic</option>
+                  <option value="hy">Armenian</option>
+                  <option value="az">Azerbaijani</option>
+                  <option value="eu">Basque</option>
+                  <option value="be">Belarusian</option>
+                  <option value="bn">Bengali</option>
+                  <option value="bs">Bosnian</option>
+                  <option value="bg">Bulgarian</option>
+                  <option value="ca">Catalan</option>
+                  <option value="ceb">Cebuano</option>
+                  <option value="ny">Chichewa</option>
+                  <option value="zh-CN">Chinese (Simplified)</option>
+                  <option value="zh-TW">Chinese (Traditional)</option>
+                  <option value="co">Corsican</option>
+                  <option value="hr">Croatian</option>
+                  <option value="cs">Czech</option>
+                  <option value="da">Danish</option>
+                  <option value="nl">Dutch</option>
+                  <option value="en" selected>English</option>
+                  <option value="eo">Esperanto</option>
+                  <option value="et">Estonian</option>
+                  <option value="tl">Filipino</option>
+                  <option value="fi">Finnish</option>
+                  <option value="fr">French</option>
+                  <option value="fy">Frisian</option>
+                  <option value="gl">Galician</option>
+                  <option value="ka">Georgian</option>
+                  <option value="de">German</option>
+                  <option value="el">Greek</option>
+                  <option value="gu">Gujarati</option>
+                  <option value="ht">Haitian Creole</option>
+                  <option value="ha">Hausa</option>
+                  <option value="haw">Hawaiian</option>
+                  <option value="iw">Hebrew</option>
+                  <option value="hi">Hindi</option>
+                  <option value="hmn">Hmong</option>
+                  <option value="hu">Hungarian</option>
+                  <option value="is">Icelandic</option>
+                  <option value="ig">Igbo</option>
+                  <option value="id">Indonesian</option>
+                  <option value="ga">Irish</option>
+                  <option value="it">Italian</option>
+                  <option value="ja">Japanese</option>
+                  <option value="jw">Javanese</option>
+                  <option value="kn">Kannada</option>
+                  <option value="kk">Kazakh</option>
+                  <option value="km">Khmer</option>
+                  <option value="rw">Kinyarwanda</option>
+                  <option value="ko">Korean</option>
+                  <option value="ku">Kurdish (Kurmanji)</option>
+                  <option value="ky">Kyrgyz</option>
+                  <option value="lo">Lao</option>
+                  <option value="la">Latin</option>
+                  <option value="lv">Latvian</option>
+                  <option value="lt">Lithuanian</option>
+                  <option value="lb">Luxembourgish</option>
+                  <option value="mk">Macedonian</option>
+                  <option value="mg">Malagasy</option>
+                  <option value="ms">Malay</option>
+                  <option value="ml">Malayalam</option>
+                  <option value="mt">Maltese</option>
+                  <option value="mi">Maori</option>
+                  <option value="mr">Marathi</option>
+                  <option value="mn">Mongolian</option>
+                  <option value="my">Burmese</option>
+                  <option value="ne">Nepali</option>
+                  <option value="no">Norwegian</option>
+                  <option value="or">Odia</option>
+                  <option value="ps">Pashto</option>
+                  <option value="fa">Persian</option>
+                  <option value="pl">Polish</option>
+                  <option value="pt">Portuguese</option>
+                  <option value="pa">Punjabi</option>
+                  <option value="ro">Romanian</option>
+                  <option value="ru">Russian</option>
+                  <option value="sm">Samoan</option>
+                  <option value="gd">Scots Gaelic</option>
+                  <option value="sr">Serbian</option>
+                  <option value="st">Sesotho</option>
+                  <option value="sn">Shona</option>
+                  <option value="sd">Sindhi</option>
+                  <option value="si">Sinhala</option>
+                  <option value="sk">Slovak</option>
+                  <option value="sl">Slovenian</option>
+                  <option value="so">Somali</option>
+                  <option value="es">Spanish</option>
+                  <option value="su">Sundanese</option>
+                  <option value="sw">Swahili</option>
+                  <option value="sv">Swedish</option>
+                  <option value="tg">Tajik</option>
+                  <option value="ta">Tamil</option>
+                  <option value="te">Telugu</option>
+                  <option value="th">Thai</option>
+                  <option value="tr">Turkish</option>
+                  <option value="uk">Ukrainian</option>
+                  <option value="ur">Urdu</option>
+                  <option value="ug">Uyghur</option>
+                  <option value="uz">Uzbek</option>
+                  <option value="vi">Vietnamese</option>
+                  <option value="cy">Welsh</option>
+                  <option value="xh">Xhosa</option>
+                  <option value="yi">Yiddish</option>
+                  <option value="yo">Yoruba</option>
+                  <option value="zu">Zulu</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <!-- Menu Ends Are Here -->
         </div>
       </div>
     </header>
     <!--Snap Sync Header Ends Are Here -->
     <!-- =================================================================================  -->
+
+    <!-- Linked With JavsScript File Starts Are Here -->
+    <script src="./js/headers.js"></script>
+    <!-- Linked With JavsScript File Ends Are Here -->
   </body>
 </html>
