--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
               type="search"
               placeholder="Search high-resolution image"
               title="Search Term: Eg: Snap Photo"
+              required
             />
           </form>
         </div>
