fetching images from unsplash with simplicity

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- Linked With CSS Files Starts Are Here -->
     <link rel="stylesheet" href="./css/default.css" />
     <link rel="stylesheet" href="./css/headers.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <!-- Linked With CSS Files Ends Are Here-->
 
     <title>Snap Sync - Explore a Seamless Visual Journey</title>
@@ -313,7 +314,14 @@
     <!-- =================================================================================  -->
     <!-- Main Starts Are Here -->
     <main>
-      <div id="imageContainer"></div>
+      <div class="imageContainer">
+        <div class="horizontal">
+          <img src="./images/logoPictures/snapSyncLogo.png" alt="" />
+        </div>
+        <div class="vertical">
+          <img src="./images/logoPictures/snapSyncLogo.png" alt="" />
+        </div>
+      </div>
     </main>
     <!-- Main Ends Are Here -->
     <!-- =================================================================================  -->
