color.txt .gitignore problem solved and fetching image from unsplash and shwoing done

--- a/index.html
+++ b/index.html
@@ -307,6 +307,34 @@
           <!-- Menu Ends Are Here -->
         </div>
       </div>
+      <div class="sshCategory">
+        <div class="sshCpartOne">
+          <div><a href="">Editorial</a></div>
+          <div><a href="">SnapSync+</a></div>
+        </div>
+        <div class="sshCpartTwo">
+          <div>Crozy Moments</div>
+          <div>Wallpapers</div>
+          <div>3D Renders</div>
+          <div>Nature</div>
+          <div>Architectures & Interiors</div>
+          <div>Experimental</div>
+          <div>Textures & Patterns</div>
+          <div>Film</div>
+          <div>Animals</div>
+          <div>Street Photography</div>
+          <div>Food & Drink</div>
+          <div>Travel</div>
+          <div>Fashion & Beauty</div>
+          <div>People</div>
+          <div>Health & Wealthness</div>
+          <div>Sports</div>
+          <div>Spiritualty</div>
+          <div>Current & Event</div>
+          <div>Business & Work</div>
+          <div>Arts & Culture</div>
+        </div>
+      </div>
     </header>
     <!--Snap Sync Header Ends Are Here -->
     <!-- =================================================================================  -->
@@ -314,14 +342,7 @@
     <!-- =================================================================================  -->
     <!-- Main Starts Are Here -->
     <main>
-      <div class="imageContainer">
-        <div class="horizontal">
-          <img src="./images/logoPictures/snapSyncLogo.png" alt="" />
-        </div>
-        <div class="vertical">
-          <img src="./images/logoPictures/snapSyncLogo.png" alt="" />
-        </div>
-      </div>
+      <div class="imageContainer"></div>
     </main>
     <!-- Main Ends Are Here -->
     <!-- =================================================================================  -->
