just texting the api key after deployed on the vercel

--- a/index.html
+++ b/index.html
@@ -312,28 +312,28 @@
           <div><a href="">Editorial</a></div>
           <div><a href="">SnapSync+</a></div>
         </div>
-        <div class="sshCpartTwo">
-          <div>Crozy Moments</div>
-          <div>Wallpapers</div>
-          <div>3D Renders</div>
-          <div>Nature</div>
-          <div>Architectures & Interiors</div>
-          <div>Experimental</div>
-          <div>Textures & Patterns</div>
-          <div>Film</div>
-          <div>Animals</div>
-          <div>Street Photography</div>
-          <div>Food & Drink</div>
-          <div>Travel</div>
-          <div>Fashion & Beauty</div>
-          <div>People</div>
-          <div>Health & Wealthness</div>
-          <div>Sports</div>
-          <div>Spiritualty</div>
-          <div>Current & Event</div>
-          <div>Business & Work</div>
-          <div>Arts & Culture</div>
-        </div>
+          <div class="sshCpartTwo">
+          <div class="swiper-slide">Crozy Moments</div>
+          <div class="swiper-slide">Wallpapers</div>
+          <div class="swiper-slide">3D Renders</div>
+          <div class="swiper-slide">Nature</div>
+          <div class="swiper-slide">Architectures & Interiors</div>
+          <div class="swiper-slide">Experimental</div>
+          <div class="swiper-slide">Textures & Patterns</div>
+          <div class="swiper-slide">Film</div>
+          <div class="swiper-slide">Animals</div>
+          <div class="swiper-slide">Street Photography</div>
+          <div class="swiper-slide">Food & Drink</div>
+          <div class="swiper-slide">Travel</div>
+          <div class="swiper-slide">Fashion & Beauty</div>
+          <div class="swiper-slide">People</div>
+          <div class="swiper-slide">Health & Wealthness</div>
+          <div class="swiper-slide">Sports</div>
+          <div class="swiper-slide">Spiritualty</div>
+          <div class="swiper-slide">Current & Event</div>
+          <div class="swiper-slide">Business & Work</div>
+          <div class="swiper-slide">Arts & Culture</div>
+          </div>
       </div>
     </header>
     <!--Snap Sync Header Ends Are Here -->
@@ -348,7 +348,7 @@
     <!-- =================================================================================  -->
 
     <!-- Linked With JavsScript File Starts Are Here -->
-    <script src="./js/headers.js"></script>
+    <script src="./js/menu.js"></script>
 
     <!-- Fetch Image From Unsplash.com -->
     <script src="./js/callUnsplashApi.js"></script>
