--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <link rel="manifest" href="./favicon_io/site.webmanifest" />
     <!-- Site Favicon Ends Are Here -->
 
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+
     <!-- Linked With CSS Files Starts Are Here -->
     <link rel="stylesheet" href="./css/default.css" />
     <link rel="stylesheet" href="./css/headers.css" />
@@ -312,28 +317,33 @@
           <div><a href="">Editorial</a></div>
           <div><a href="">SnapSync+</a></div>
         </div>
-          <div class="sshCpartTwo">
-          <div>Crozy Moments</div>
-          <div>Wallpapers</div>
-          <div>3D Renders</div>
-          <div>Nature</div>
-          <div>Architectures & Interiors</div>
-          <div>Experimental</div>
-          <div>Textures & Patterns</div>
-          <div>Film</div>
-          <div>Animals</div>
-          <div>Street Photography</div>
-          <div>Food & Drink</div>
-          <div>Travel</div>
-          <div>Fashion & Beauty</div>
-          <div>People</div>
-          <div>Health & Wealthness</div>
-          <div>Sports</div>
-          <div>Spiritualty</div>
-          <div>Current & Event</div>
-          <div>Business & Work</div>
-          <div>Arts & Culture</div>
-          </div>
+         <div class="swiper">
+           <ul class="sshCpartTwo swiper-wrapper">
+          <li class="swiper-slide">Crozy Moments</li>
+          <li class="swiper-slide">Wallpapers</li>
+          <li class="swiper-slide">3D Renders</li>
+          <li class="swiper-slide">Nature</li>
+          <li class="swiper-slide">Architectures & Interiors</li>
+          <li class="swiper-slide">Experimental</li>
+          <li class="swiper-slide">Textures & Patterns</li>
+          <li class="swiper-slide">Film</li>
+          <li class="swiper-slide">Animals</li>
+          <li class="swiper-slide">Street Photography</li>
+          <li class="swiper-slide">Food & Drink</li>
+          <li class="swiper-slide">Travel</li>
+          <li class="swiper-slide">Fashion & Beauty</li>
+          <li class="swiper-slide">People</li>
+          <li class="swiper-slide">Health & Wealthness</li>
+          <li class="swiper-slide">Sports</li>
+          <li class="swiper-slide">Spiritualty</li>
+          <li class="swiper-slide">Current & Event</li>
+          <li class="swiper-slide">Business & Work</li>
+          <li class="swiper-slide">Arts & Culture</li>
+          </ul>
+            <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+
+         </div>
       </div>
     </header>
     <!--Snap Sync Header Ends Are Here -->
@@ -347,8 +357,13 @@
     <!-- Main Ends Are Here -->
     <!-- =================================================================================  -->
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+
     <!-- Linked With JavsScript File Starts Are Here -->
     <script src="./js/menu.js"></script>
+
+    <script src="./js/initializeSwiper.js"></script>
 
     <!-- Fetch Image From Unsplash.com -->
     <script src="./js/callUnsplashApi.js"></script>
