features section desgining completed

--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
     <link rel="manifest" href="./favicon_io/site.webmanifest" />
     <!-- Site Favicon Ends Are Here -->
 
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
 
     <!-- Linked With CSS Files Starts Are Here -->
     <link rel="stylesheet" href="./css/default.css" />
     <link rel="stylesheet" href="./css/headers.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/features.css" />
     <!-- Linked With CSS Files Ends Are Here-->
 
     <title>Snap Sync - Explore a Seamless Visual Journey</title>
@@ -317,33 +318,32 @@
           <div><a href="">Editorial</a></div>
           <div><a href="">SnapSync+</a></div>
         </div>
-         <div class="swiper">
-           <ul class="sshCpartTwo swiper-wrapper">
-          <li class="swiper-slide">Crozy Moments</li>
-          <li class="swiper-slide">Wallpapers</li>
-          <li class="swiper-slide">3D Renders</li>
-          <li class="swiper-slide">Nature</li>
-          <li class="swiper-slide">Architectures & Interiors</li>
-          <li class="swiper-slide">Experimental</li>
-          <li class="swiper-slide">Textures & Patterns</li>
-          <li class="swiper-slide">Film</li>
-          <li class="swiper-slide">Animals</li>
-          <li class="swiper-slide">Street Photography</li>
-          <li class="swiper-slide">Food & Drink</li>
-          <li class="swiper-slide">Travel</li>
-          <li class="swiper-slide">Fashion & Beauty</li>
-          <li class="swiper-slide">People</li>
-          <li class="swiper-slide">Health & Wealthness</li>
-          <li class="swiper-slide">Sports</li>
-          <li class="swiper-slide">Spiritualty</li>
-          <li class="swiper-slide">Current & Event</li>
-          <li class="swiper-slide">Business & Work</li>
-          <li class="swiper-slide">Arts & Culture</li>
+        <div class="swiper">
+          <ul class="sshCpartTwo swiper-wrapper">
+            <li class="swiper-slide">Crozy Moments</li>
+            <li class="swiper-slide">Wallpapers</li>
+            <li class="swiper-slide">3D Renders</li>
+            <li class="swiper-slide">Nature</li>
+            <li class="swiper-slide">Architectures & Interiors</li>
+            <li class="swiper-slide">Experimental</li>
+            <li class="swiper-slide">Textures & Patterns</li>
+            <li class="swiper-slide">Film</li>
+            <li class="swiper-slide">Animals</li>
+            <li class="swiper-slide">Street Photography</li>
+            <li class="swiper-slide">Food & Drink</li>
+            <li class="swiper-slide">Travel</li>
+            <li class="swiper-slide">Fashion & Beauty</li>
+            <li class="swiper-slide">People</li>
+            <li class="swiper-slide">Health & Wealthness</li>
+            <li class="swiper-slide">Sports</li>
+            <li class="swiper-slide">Spiritualty</li>
+            <li class="swiper-slide">Current & Event</li>
+            <li class="swiper-slide">Business & Work</li>
+            <li class="swiper-slide">Arts & Culture</li>
           </ul>
-            <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
-
-         </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
       </div>
     </header>
     <!--Snap Sync Header Ends Are Here -->
@@ -352,21 +352,120 @@
     <!-- =================================================================================  -->
     <!-- Main Starts Are Here -->
     <main>
-      <div class="imageContainer"></div>
+      <!-- Features Secitons Starts Are Here -->
+      <section class="features">
+        <div class="featuresContainer">
+          <div class="searchBox">
+            <article>
+              <h1>Snap Sync</h1>
+              <p>
+                The go-to hub for visual content on the web. Fueled by the
+                creative community worldwide.
+              </p>
+            </article>
+            <div class="trendingSearches">
+              <ul class="trending">
+                <li><a href="">Trending: </a></li>
+                <li><a href="">follower,</a></li>
+                <li><a href="">wallpapers,</a></li>
+                <li><a href="">background,</a></li>
+                <li><a href="">happy,</a></li>
+                <li><a href="">love</a></li>
+              </ul>
+              <div class="supported">
+                <span>Supported by </span>
+                <a href="https://www.unsplash.com/">
+                  <img
+                    src="./images/featuresSections/unsplashLogo.png"
+                    alt="Unsplash Logo"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="sshSearch">
+              <form id="searchForm">
+                <button title="Search Image" type="submit">
+                  <img
+                    src="./images/headerPictures/searchPictures.png"
+                    alt="Search Pictures"
+                  />
+                </button>
+                <input
+                  id="search"
+                  name="search"
+                  type="search"
+                  placeholder="Search high-resolution image"
+                  title="Search Term: Eg: Snap Photo"
+                  required
+                />
+              </form>
+            </div>
+          </div>
+          <div class="trendignSearchesBox">
+            <ul>
+              <li><a href="">Presents</a></li>
+              <li><a href="">Happy Thanksgiving</a></li>
+              <li><a href="">Banana Bread</a></li>
+              <li><a href="">Advent Candle</a></li>
+              <li><a href="">Halloween</a></li>
+              <li><a href="">Bridges</a></li>
+            </ul>
+            <a href="" target="_blank"
+              ><img
+                src="./images/featuresSections/trendingSearchesIcon.png"
+                alt="Trending Searches"
+              />see trending searches</a
+            >
+          </div>
+          <div class="featureBox">
+            <img
+              src="./images/featuresSections/snapSyncFeatruesImage.jpg"
+              alt="Snap Sync Feature Image"
+            />
+            <div class="owner">
+              <span>Featured</span>
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://unsplash.com/@fakurian?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Milad Fakurian</a
+              >
+            </div>
+            <div class="imageCredits">
+              Photo by
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://unsplash.com/@fakurian?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Milad Fakurian
+              </a>
+              on
+              <a
+                rel="noopener"
+                target="_blank"
+                href="https://unsplash.com/photos/yellow-and-white-balloons-on-orange-surface-PGdW_bHDbpI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Features Secitons Ends Are Here -->
+
+      <!-- Image Viewer or Image Container Starts Are Here -->
+      <section class="imageViewer">
+        <div class="imageContainer"></div>
+      </section>
+      <!-- Image Viewer or Image Container Ends Are Here -->
     </main>
     <!-- Main Ends Are Here -->
     <!-- =================================================================================  -->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-
     <!-- Linked With JavsScript File Starts Are Here -->
     <script src="./js/menu.js"></script>
-
     <script src="./js/initializeSwiper.js"></script>
-
-    <!-- Fetch Image From Unsplash.com -->
-    <script src="./js/callUnsplashApi.js"></script>
     <!-- Linked With JavsScript File Ends Are Here -->
   </body>
 </html>
