modify on .sshCategory and add a sticky header

--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <!-- Linked With JavsScript File Starts Are Here -->
+    <script src="./js/stickyHeader.js"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/initializeSwiper.js"></script>
     <!-- Linked With JavsScript File Ends Are Here -->
