add a features which is when users click on every category then clickAableNext class toggling

--- a/index.html
+++ b/index.html
@@ -315,31 +315,31 @@
       </div>
       <div class="sshCategory">
         <div class="sshCpartOne">
-          <div><a href="">Editorial</a></div>
-          <div><a href="">SnapSync+</a></div>
+          <div class="clickable clickAbleNext">Editorial</div>
+          <div class="clickable">SnapSync+</div>
         </div>
         <div class="swiper">
           <ul class="sshCpartTwo swiper-wrapper">
-            <li class="swiper-slide">Crozy Moments</li>
-            <li class="swiper-slide">Wallpapers</li>
-            <li class="swiper-slide">3D Renders</li>
-            <li class="swiper-slide">Nature</li>
-            <li class="swiper-slide">Architectures & Interiors</li>
-            <li class="swiper-slide">Experimental</li>
-            <li class="swiper-slide">Textures & Patterns</li>
-            <li class="swiper-slide">Film</li>
-            <li class="swiper-slide">Animals</li>
-            <li class="swiper-slide">Street Photography</li>
-            <li class="swiper-slide">Food & Drink</li>
-            <li class="swiper-slide">Travel</li>
-            <li class="swiper-slide">Fashion & Beauty</li>
-            <li class="swiper-slide">People</li>
-            <li class="swiper-slide">Health & Wealthness</li>
-            <li class="swiper-slide">Sports</li>
-            <li class="swiper-slide">Spiritualty</li>
-            <li class="swiper-slide">Current & Event</li>
-            <li class="swiper-slide">Business & Work</li>
-            <li class="swiper-slide">Arts & Culture</li>
+            <li class="swiper-slide clickable">Crozy Moments</li>
+            <li class="swiper-slide clickable">Wallpapers</li>
+            <li class="swiper-slide clickable">3D Renders</li>
+            <li class="swiper-slide clickable">Nature</li>
+            <li class="swiper-slide clickable">Architectures & Interiors</li>
+            <li class="swiper-slide clickable">Experimental</li>
+            <li class="swiper-slide clickable">Textures & Patterns</li>
+            <li class="swiper-slide clickable">Film</li>
+            <li class="swiper-slide clickable">Animals</li>
+            <li class="swiper-slide clickable">Street Photography</li>
+            <li class="swiper-slide clickable">Food & Drink</li>
+            <li class="swiper-slide clickable">Travel</li>
+            <li class="swiper-slide clickable">Fashion & Beauty</li>
+            <li class="swiper-slide clickable">People</li>
+            <li class="swiper-slide clickable">Health & Wealthness</li>
+            <li class="swiper-slide clickable">Sports</li>
+            <li class="swiper-slide clickable">Spiritualty</li>
+            <li class="swiper-slide clickable">Current & Event</li>
+            <li class="swiper-slide clickable">Business & Work</li>
+            <li class="swiper-slide clickable">Arts & Culture</li>
           </ul>
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
@@ -466,6 +466,7 @@
     <!-- Linked With JavsScript File Starts Are Here -->
     <script src="./js/stickyHeader.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/sshCategory.js"></script>
     <script src="./js/initializeSwiper.js"></script>
     <!-- Linked With JavsScript File Ends Are Here -->
   </body>
