add a ultimate features

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <!-- Linked With CSS Files Starts Are Here -->
     <link rel="stylesheet" href="./css/default.css" />
     <link rel="stylesheet" href="./css/headers.css" />
-    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/features.css" />
+    <link rel="stylesheet" href="./css/ultimate.css" />
     <!-- Linked With CSS Files Ends Are Here-->
 
     <title>Snap Sync - Explore a Seamless Visual Journey</title>
@@ -453,8 +453,246 @@
       <!-- Features Secitons Ends Are Here -->
 
       <!-- Image Viewer or Image Container Starts Are Here -->
-      <section class="imageViewer">
-        <div class="imageContainer"></div>
+      <section class="ultimate">
+        <div class="imageContainer">
+          <div class="horizontal">
+            <img
+              src="https://images.unsplash.com/photo-1697486883490-208bd07c3268"
+              alt="Big"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@galka_nz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Galina Nelyubova</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/the-numbers-are-in-front-of-a-black-background-WdB9UhGH0-o?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+          <div class="vertical">
+            <img
+              src="https://images.unsplash.com/photo-1518684079-3c830dcef090"
+              alt="Vertical"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@christoph?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Christoph Schulz</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/burj-al-arab-dubai-7tb-b37yHx4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+          <div class="big">
+            <img
+              src="https://images.unsplash.com/flagged/photo-1559717865-a99cac1c95d8"
+              alt="Big"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@zqlee?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >ZQ Lee</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/city-during-day-VbDjv8-8ibc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+
+          <div class="horizontal">
+            <img
+              src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e"
+              alt="Horizontal"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@oulashin?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Sean Oulashin</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/seashore-during-golden-hour-KMn4VEeEPR8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+          <div class="vertical">
+            <img
+              src="https://images.unsplash.com/photo-1556305871-9cf6441a03cd"
+              alt="Vertical"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@matreding?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Mathias Reding</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/pyramid-of-egypt-gH-kUuPsJ1I?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+          <div class="big">
+            <img
+              src="https://images.unsplash.com/photo-1570129477492-45c003edd2be"
+              alt="Big"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@churchoftodd?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >todd kent</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/gray-wooden-house-178j8tJrNlc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+
+          <div class="horizontal">
+            <img
+              src="https://images.unsplash.com/photo-1519666336592-e225a99dcd2f"
+              alt="Horizontal"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@simonmaage?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Simon Maage</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/aerial-photo-of-airplane-wings-during-daytime-C9dhUVP-o6w?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+          <div class="vertical">
+            <img
+              src="https://images.unsplash.com/photo-1572358899655-f63ece97bfa5"
+              alt="Vertical"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@aysbektr?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Ayse Bek</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/people-walking-outside-a-dome-mosque-building-YLdYVzHopto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+          <div class="big">
+            <img
+              src="https://images.unsplash.com/photo-1605553378313-22d0dc541393"
+              alt="Big"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@tasnimumar?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >tasnim umar</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/people-in-front-of-brown-concrete-building-during-daytime-blbwkwHPItE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+
+          <div class="horizontal">
+            <img
+              src="https://images.unsplash.com/photo-1625535069654-cfeb8f829088"
+              alt="Vertical"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@tvannoy?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Trevor Vannoy</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/text-ufnhDMFOZ_M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+          <div class="vertical">
+            <img
+              src="https://images.unsplash.com/photo-1523961131990-5ea7c61b2107"
+              alt="Horizontal"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@fabioha?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >fabio</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/geometric-shape-digital-wallpaper-oyXis2kALVg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+          <div class="big">
+            <img
+              src="https://images.unsplash.com/photo-1493612276216-ee3925520721"
+              alt="Big"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@jdiegoph?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Diego PH</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/person-holding-light-bulb-fIq0tET6llw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+          <div class="horizontal">
+            <img
+              src="https://images.unsplash.com/photo-1682687220866-c856f566f1bd"
+              alt="Horizontal"
+            />
+            <div class="imageCredits">
+              Photo by
+              <a
+                href="https://unsplash.com/@neom?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >NEOM</a
+              >
+              on
+              <a
+                href="https://unsplash.com/photos/a-group-of-antelope-standing-next-to-each-other-0rCJ-y3wx6g?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                >Unsplash</a
+              >
+            </div>
+          </div>
+        </div>
       </section>
       <!-- Image Viewer or Image Container Ends Are Here -->
     </main>
