--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="./css/headers.css" />
     <link rel="stylesheet" href="./css/features.css" />
     <link rel="stylesheet" href="./css/ultimate.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
     <!-- Linked With CSS Files Ends Are Here-->
 
     <title>Snap Sync - Explore a Seamless Visual Journey</title>
@@ -697,6 +698,97 @@
       <!-- Image Viewer or Image Container Ends Are Here -->
     </main>
     <!-- Main Ends Are Here -->
+    <!-- =================================================================================  -->
+
+    <!-- =================================================================================  -->
+    <!-- Footer Starts Are Here -->
+    <footer>
+      <div class="footerContainer">
+        <div class="footerBox footerSnapSyncBox">
+          <h5>Snap Sync</h5>
+          <p>
+            Stunning, freely shared visuals contributed by the world's most
+            altruistic community of photographers. Surpassing the quality of
+            traditional royalty-free or stock images.
+          </p>
+          <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Community</a></li>
+            <li><a href="">Join the team</a></li>
+            <li><a href="">Develper/APIs</a></li>
+            <li><a href="">Press</a></li>
+            <li><a href="">Help Center</a></li>
+          </ul>
+        </div>
+        <div class="footerBox footerProductBox">
+          <h5>Product</h5>
+          <ul>
+            <li><a href=""> Explore </a></li>
+            <li><a href=""> Unsplash Awards</a></li>
+            <li><a href=""> Unsplash for Education</a></li>
+            <li><a href="">Unsplash for iOS</a></li>
+            <li><a href="">Apps & Plugins</a></li>
+          </ul>
+        </div>
+        <div class="footerBox footerPopularBox">
+          <h5>Popular</h5>
+          <ul>
+            <li><a href="">Backgrounds</a></li>
+            <li><a href="">Free Images</a></li>
+            <li><a href="">Free Stock Photos</a></li>
+            <li><a href="">Happy Birthday Images</a></li>
+            <li><a href="">Cool Photos</a></li>
+            <li><a href="">Nature Pictures</a></li>
+            <li><a href="">Black Backgrounds</a></li>
+            <li><a href="">White Backgrounds</a></li>
+            <li><a href="">Textures</a></li>
+            <li><a href="">Desktop Backgrounds</a></li>
+          </ul>
+        </div>
+        <div class="footerBox footerWallpapersBox">
+          <h5>Wallpapers</h5>
+          <ul>
+            <li><a href="">HD Wallpapers</a></li>
+            <li><a href="">4K Wallpapers</a></li>
+            <li><a href="">iPhone Wallpapers</a></li>
+            <li><a href="">Cool Wallpapers</a></li>
+            <li><a href="">Cute Wallpapers</a></li>
+            <li><a href="">Live Wallpapers</a></li>
+            <li><a href="">PC Wallpapers</a></li>
+            <li><a href="">Black Wallpapers</a></li>
+            <li><a href="">iPad Wallpapers</a></li>
+            <li><a href="">Desktop Wallpapers</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footerBar">
+        <div class="pages">
+          <ul>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Terms</a></li>
+            <li><a href="">Security</a></li>
+          </ul>
+        </div>
+        <div class="social">
+          <ul>
+            <li>
+              <img src="./images/sociaLicon/twitter.png" alt="Twitter Icon" />
+            </li>
+            <li>
+              <img src="./images/sociaLicon/facebook.png" alt="Facebook Icon" />
+            </li>
+            <li>
+              <img
+                src="./images/sociaLicon/instagram.png"
+                alt="Instagram Icon"
+              />
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer Ends Are Here -->
     <!-- =================================================================================  -->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
